turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: not found: value setBrosse
	setBrosse(Red)
        ^